updated html, css, and javascript. In the java I added a timer, made the questions in the arrays appear and made it so the user is told whether their answer was correct or not. With the css I added coloring and formating

--- a/index.html
+++ b/index.html
@@ -4,20 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timed Coding Quiz</title>
-    <link rel="resetsheet" href="reset.css">
-	<link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="head">
         <h1>View High Scores</h1>
-        <div id="timer">Time</div>
+        <div id="timerformat">
+        <h2>Time:</h2>
+        <div id="timer">75</div>
+        </div>
     </header>
-
     <section>
+        <h3>Timed Coding Quiz</h3>
     </section>
+    <section id="start">
+        <button id="button">Start!</button>
+    </section>
+`   <section>
+        <div id="quiz-container">
+             <h4 id="question">Question goes here</h2>
+                  <ul id="answer-options">
+                     <li class="answer-option">Answer option 1</li>
+                      <li class="answer-option">Answer option 2</li>
+                      <li class="answer-option">Answer option 3</li>
+                      <li class="answer-option">Answer option 4</li>
+                 </ul>
+                 <div id="message"></div>
+        </div>
+</section>
     
-    <section>
-    </section>
+    <script src="script.js"></script>
     
 </body>
 </html>
