updated questions, leadedr board, and quiz

--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
                  </ul>
                  <div id="message"></div>
         </div>
-</section>
+    </section>
+    <section id="initials-section">
+        <p>Your final score is: <span id="final-score"> </span></p>
+        <div id="flex">
+        <p>Your intials: <input type="text" name="intials" id="user-initials"> </p>
+        <button id="save">Save</button>
+        </div>
+    </section>
+    <section>
+        <div id="leaderboard-container">
+            <ol id="leaderboard-list"></ol>
+          </div>
+    </section>
     
     <script src="script.js"></script>
     
